# ODrive

./: .gitignore  ODrive_Workspace.code-workspace
Firmware/: .gitignore  CMakeLists.txt  odrive-interface.yaml  syscalls.c  tup.config
Firmware/Board/v3/: STM32F446RETX_FLASH.ld  board.cpp
Firmware/Board/v3/Inc/: FreeRTOSConfig.h  board.h  main.h  tim.h
Firmware/Board/v3/Src/: adc.c  gpio.c  tim.c  usbd_conf.c
Firmware/Drivers/DRV8301/: drv8301.cpp
Firmware/Drivers/STM32/: stm32_gpio.cpp  stm32_nvm.c  stm32_system.h  stm32_timer.hpp
Firmware/MotorControl/: axis.cpp  controller.cpp  encoder.hpp  low_level.cpp  main.cpp  motor.cpp  motor.hpp  odrive_main.h  utils.cpp
Firmware/Output/: ODriveFirmware.elf  ODriveFirmware.hex
Firmware/autogen/: endpoints.hpp  function_stubs.hpp  interfaces.hpp  type_info.hpp
Firmware/communication/: ascii_protocol.cpp
Firmware/communication/can/: can_simple.cpp
Firmware/fibre-cpp/include/fibre/: cpp_utils.hpp
tools/odrive/: version.py
